fix: style white space implementation

--- a/ui/web/src/components/Authenticated/Ranking/Ranking.scss
+++ b/ui/web/src/components/Authenticated/Ranking/Ranking.scss
@@ -83,7 +83,6 @@
       align-items: flex-start;
       display: flex;
       justify-content: space-around;
-      padding: 1em 0;
       width: 100%;
     }
   }
