--- a/ui/web/src/components/Authenticated/Ranking/elements/WeekRankCard/WeekRankCard.scss
+++ b/ui/web/src/components/Authenticated/Ranking/elements/WeekRankCard/WeekRankCard.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin: 1em 0;
     padding: 0.5em 0.75em;
     width: 15em;
   }
